# skn-v1-

./: .gitignore  LICENSE  README.md  build_skn.py  demo_mission_control.py  gen.py  generate_assets.py  pyproject.toml  setup.py  skn_cinematic.py  skn_mission_control.py  skn_orbital_demo.py  skn_orbital_tui.py  sovereign_futuristic_demo.py  write_readme.py
scripts/: demo_formation.py
skn/: __init__.py  geometric_policy.py  node.py  simulation.py  simulation_v3.py  swarm.py
skn_v1.egg-info/: PKG-INFO  SOURCES.txt
tests/: run_tests.py
viz/: skn_mission_control.html
