[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skn-v1"
version = "1.7.1"
description = "Sovereign Kinematic Node — topology-aware swarm robotics"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Chad Holland", email = "your.email@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/holland202/skn-v1-"
Repository = "https://github.com/holland202/skn-v1-"

[tool.setuptools.packages.find]
where = ["."]
include = ["skn*"]
